<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.feup.meoarenacustomer.app.RegisterDetailsFragment">

    <TextView
        android:layout_width="fill_parent"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:text="@string/personal_data_title"
        android:id="@+id/detailsTextView"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/nameEditText"
        android:textSize="22dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name_hint"
        android:ems="10"
        android:id="@+id/nameEditText"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/detailsTextView"/>


    <EditText
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/nif_hint"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/nifEditText"
        android:layout_below="@+id/nameEditText" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:text="@string/login_details_title"
        android:id="@+id/loginTextView"
        android:layout_below="@+id/nifEditText"
        android:layout_alignStart="@+id/nameEditText"
        android:textSize="22dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:id="@+id/emailEditText"
        android:layout_below="@+id/loginTextView"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:layout_below="@+id/emailEditText" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirmPasswordEditText"
        android:layout_below="@+id/passwordEditText" />

    <Button
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_registration"
        android:id="@+id/continueRegistrationButton"
        android:layout_below="@+id/confirmPasswordEditText"
     />


</RelativeLayout>