<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.feup.meoarenacustomer.app.ShowActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/date_show"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/date_onViewShow"
        android:layout_alignTop="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tickets_number"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tickets_number"
        android:layout_alignTop="@+id/textView2"
        android:layout_toEndOf="@+id/date_onViewShow" />

    <TableRow android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:gravity="center"
        android:layout_above="@+id/buyTickets"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp">

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number_to_buy"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="15dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="5 EUR"
            android:id="@+id/price"
            android:layout_toEndOf="@+id/number_to_buy"
            android:layout_alignTop="@+id/number_to_buy"
            android:gravity="center"
            android:layout_alignBottom="@+id/number_to_buy"
            android:layout_alignEnd="@+id/tickets_number"
            android:textSize="30sp"
            />
    </TableRow>



    <Button
        android:layout_width="224dip"
        android:layout_height="wrap_content"
        android:text="@string/buy_tickets"
        android:id="@+id/buyTickets"
        android:layout_marginBottom="44dp"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
